Edicion del index de Inventario

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -13,7 +13,7 @@
     </nav>
 
     <main>
-        {% block content %}{% endblock %}
+        {% block content %} <br>|<br>|<br> {% endblock %}
     </main>
 
     <footer>
