--- a/app/templates/inventario.html
+++ b/app/templates/inventario.html
@@ -17,7 +17,7 @@
 
     <div class="flex items-center justify-between">
         <!-- Logo -->
-          <a href="{{ url_for('main.home') }}">
+          <a href="{{ url_for('main.home') }}" class="flex items-center gap-3">
               <img src="{{ url_for('static', filename='images/Logo_Stockly.png') }}" 
                   alt="Logo Stockly"
                   class="w-16 h-16 object-contain">
@@ -27,10 +27,10 @@
       <nav class="flex-1 flex justify-center">
         <ul class="inline-flex bg-white/90 text-black rounded-full px-6 py-2 gap-8 items-center shadow">
           <li><a href="{{ url_for('main.home') }}" class="text-black hover:text-brandOrange">Inicio</a></li>
-          <li><a href="{{ url_for('inventario.inventario') }}" class="text-black hover:text-brandOrange">Inventario</a></li>
+          <li><a href="{{ url_for('inventario.inventario') }}" class="font-semibold text-brandOrange">Inventario</a></li>
           <li><a href="{{ url_for('main.pedidos') }}" class="text-black hover:text-brandOrange">Pedidos</a></li>
           <li><a href="{{ url_for('main.reportes') }}" class="text-black hover:text-brandOrange">Reportes</a></li>
-          <li><a href="{{ url_for('main.cuenta') }}" class="text-black hover:text-brandOrange">Cuenta</a></li>
+          <li><a href="{{ url_for('cuenta.cuenta') }}" class="text-black hover:text-brandOrange">Cuenta</a></li>
         </ul>
       </nav>
         <div class="w-12"></div>
