--- a/app/templates/inventario/inventario.html
+++ b/app/templates/inventario/inventario.html
@@ -28,8 +28,8 @@
         <ul class="inline-flex bg-white/90 text-black rounded-full px-6 py-2 gap-8 items-center shadow">
           <li><a href="{{ url_for('main.home') }}" class="text-black hover:text-brandOrange">Inicio</a></li>
           <li><a href="{{ url_for('inventario.inventario') }}" class="font-semibold text-brandOrange">Inventario</a></li>
-          <li><a href="{{ url_for('main.pedidos') }}" class="text-black hover:text-brandOrange">Pedidos</a></li>
-          <li><a href="{{ url_for('main.reportes') }}" class="text-black hover:text-brandOrange">Reportes</a></li>
+          <li><a href="{{ url_for('pedidos.pedidos') }}" class="text-black hover:text-brandOrange">Pedidos</a></li>
+          <li><a href="{{ url_for('reportes.reportes') }}" class="text-black hover:text-brandOrange">Reportes</a></li>
           <li><a href="{{ url_for('cuenta.cuenta') }}" class="text-black hover:text-brandOrange">Cuenta</a></li>
         </ul>
       </nav>
