Implementación de autenticación y registro de usuarios, configuración inicial de base de datos, creación de modelos y pruebas de conexion e implementación de la base de datos

--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -42,8 +42,9 @@
           <!-- Usuario -->
           <div class="mb-4">
             <input 
-              type="text" 
-              placeholder="Usuario" 
+              type="text"
+              name="email" required
+              placeholder="Correo Electrónico" 
               class="w-full px-4 py-2 border border-blue-900 rounded focus:outline-none focus:ring-2 focus:ring-blue-500"
             >
           </div>
@@ -52,6 +53,7 @@
           <div class="mb-6">
             <input 
               type="password" 
+              name="contrasena" required
               placeholder="Contraseña" 
               class="w-full px-4 py-2 border border-blue-900 rounded focus:outline-none focus:ring-2 focus:ring-blue-500"
             >
