--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -34,7 +34,8 @@
         <div>
           <input 
             type="text" 
-            placeholder="Nombre" 
+            placeholder="Nombre"
+            name="nombre" required
             class="w-full px-4 py-2 border border-blue-900 rounded focus:outline-none focus:ring-2 focus:ring-blue-500"
           >
         </div>
@@ -43,7 +44,8 @@
         <div>
           <input 
             type="text" 
-            placeholder="Apellido" 
+            placeholder="Apellido"
+            name="apellido" required
             class="w-full px-4 py-2 border border-blue-900 rounded focus:outline-none focus:ring-2 focus:ring-blue-500"
           >
         </div>
@@ -53,6 +55,7 @@
           <input 
             type="tel" 
             placeholder="Número de teléfono" 
+            name="telefono" required
             class="w-full px-4 py-2 border border-blue-900 rounded focus:outline-none focus:ring-2 focus:ring-blue-500"
           >
         </div>
@@ -62,6 +65,17 @@
           <input 
             type="text" 
             placeholder="Dirección" 
+            name="direccion" required
+            class="w-full px-4 py-2 border border-blue-900 rounded focus:outline-none focus:ring-2 focus:ring-blue-500"
+          >
+        </div>
+
+        <!-- Correo -->
+        <div>
+          <input 
+            type="text" 
+            placeholder="Correo electrónico" 
+            name="email" required
             class="w-full px-4 py-2 border border-blue-900 rounded focus:outline-none focus:ring-2 focus:ring-blue-500"
           >
         </div>
@@ -71,6 +85,7 @@
           <input 
             type="password" 
             placeholder="Contraseña" 
+            name="contrasena" required
             class="w-full px-4 py-2 border border-blue-900 rounded focus:outline-none focus:ring-2 focus:ring-blue-500"
           >
         </div>
