--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -37,6 +37,8 @@
         <!-- Título -->
         <h2 class="text-2xl font-semibold text-brandOrange mb-8">Inicio de sesión</h2>
 
+        <!-- Mensajes flash -->
+        {% include 'partials/_flash.html' %}
         <!-- Formulario -->
         <form method="POST" action="{{ url_for('auth.login') }}" class="w-full max-w-sm">
           <!-- Usuario -->
@@ -90,5 +92,6 @@
       </div>
     </div>
   </div>
+  <script src="{{ url_for('static', filename='js/flash.js') }}" defer></script>
 </body>
 </html>
