--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -27,7 +27,8 @@
       <h2 class="text-center text-2xl font-semibold text-brandOrange mb-8 text-center">
         Crear una cuenta
       </h2>
-
+      <!-- Mensajes flash -->
+      {% include 'partials/_flash.html' %}
       <!-- Formulario de registro -->
       <form method="POST" action="{{ url_for('auth.register') }}" class="space-y-4">
         <!-- Nombre -->
@@ -107,5 +108,6 @@
         </div>
     </div>
   </div>
+  <script src="{{ url_for('static', filename='js/flash.js') }}" defer></script>
 </body>
 </html>
