--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -37,13 +37,16 @@
         <!-- Título -->
         <h2 class="text-2xl font-semibold text-brandOrange mb-8">Inicio de sesión</h2>
 
+        <!-- Mensajes flash -->
+        {% include 'partials/_flash.html' %}
         <!-- Formulario -->
         <form method="POST" action="{{ url_for('auth.login') }}" class="w-full max-w-sm">
           <!-- Usuario -->
           <div class="mb-4">
             <input 
-              type="text" 
-              placeholder="Usuario" 
+              type="text"
+              name="email" required
+              placeholder="Correo Electrónico" 
               class="w-full px-4 py-2 border border-blue-900 rounded focus:outline-none focus:ring-2 focus:ring-blue-500"
             >
           </div>
@@ -52,6 +55,7 @@
           <div class="mb-6">
             <input 
               type="password" 
+              name="contrasena" required
               placeholder="Contraseña" 
               class="w-full px-4 py-2 border border-blue-900 rounded focus:outline-none focus:ring-2 focus:ring-blue-500"
             >
@@ -88,5 +92,6 @@
       </div>
     </div>
   </div>
+  <script src="{{ url_for('static', filename='js/flash.js') }}" defer></script>
 </body>
 </html>
