--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -27,14 +27,16 @@
       <h2 class="text-center text-2xl font-semibold text-brandOrange mb-8 text-center">
         Crear una cuenta
       </h2>
-
+      <!-- Mensajes flash -->
+      {% include 'partials/_flash.html' %}
       <!-- Formulario de registro -->
       <form method="POST" action="{{ url_for('auth.register') }}" class="space-y-4">
         <!-- Nombre -->
         <div>
           <input 
             type="text" 
-            placeholder="Nombre" 
+            placeholder="Nombre"
+            name="nombre" required
             class="w-full px-4 py-2 border border-blue-900 rounded focus:outline-none focus:ring-2 focus:ring-blue-500"
           >
         </div>
@@ -43,7 +45,8 @@
         <div>
           <input 
             type="text" 
-            placeholder="Apellido" 
+            placeholder="Apellido"
+            name="apellido" required
             class="w-full px-4 py-2 border border-blue-900 rounded focus:outline-none focus:ring-2 focus:ring-blue-500"
           >
         </div>
@@ -53,6 +56,7 @@
           <input 
             type="tel" 
             placeholder="Número de teléfono" 
+            name="telefono" required
             class="w-full px-4 py-2 border border-blue-900 rounded focus:outline-none focus:ring-2 focus:ring-blue-500"
           >
         </div>
@@ -62,6 +66,17 @@
           <input 
             type="text" 
             placeholder="Dirección" 
+            name="direccion" required
+            class="w-full px-4 py-2 border border-blue-900 rounded focus:outline-none focus:ring-2 focus:ring-blue-500"
+          >
+        </div>
+
+        <!-- Correo -->
+        <div>
+          <input 
+            type="text" 
+            placeholder="Correo electrónico" 
+            name="email" required
             class="w-full px-4 py-2 border border-blue-900 rounded focus:outline-none focus:ring-2 focus:ring-blue-500"
           >
         </div>
@@ -71,6 +86,7 @@
           <input 
             type="password" 
             placeholder="Contraseña" 
+            name="contrasena" required
             class="w-full px-4 py-2 border border-blue-900 rounded focus:outline-none focus:ring-2 focus:ring-blue-500"
           >
         </div>
@@ -92,5 +108,6 @@
         </div>
     </div>
   </div>
+  <script src="{{ url_for('static', filename='js/flash.js') }}" defer></script>
 </body>
 </html>
